plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'org.springframework.boot' version '3.5.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

// Configuration commune à tous les sous-projets
allprojects {
    group = 'com.formatic'
    version = '1.0.0'

    repositories {
        mavenCentral()
    }
}

// Configuration pour tous les sous-projets
subprojects {
    apply plugin: 'java-library'
//apply plugin: 'maven-publish'
    // apply plugin: 'signing'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }


    dependencies {
        // Dépendances communes de test - utiliser les BOMs pour la gestion des versions
        testImplementation platform('org.junit:junit-bom:5.10.1')
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.assertj:assertj-core'
        testImplementation 'org.mockito:mockito-core'
        testImplementation 'org.mockito:mockito-junit-jupiter'
    }

    test {
        useJUnitPlatform()
    }


}

ext {
    springBootVersion = '3.5.3'
    thymeleafVersion = '3.1.2.RELEASE'
    slf4jVersion = '2.0.9'

    // BOMs pour la gestion des versions
    junitBomVersion = '5.10.1'
    mockitoBomVersion = '5.7.0'
    assertjVersion = '3.24.2'
}
